Fix: issues on mobile version layout

--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,11 @@ body {
   align-items: center;
   gap: 16px;
   overflow: hidden;
-  padding: 27px;
 }
 
 .message-section {
   background-color: #ffffff;
-  padding: 30px 11px;
+  padding: 30px 44px;
   gap: 15px;
   display: flex;
   flex-direction: column;
@@ -137,6 +136,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 16px;
 }
 
 #commentInput {
